# AutoCliper

./: .env.example  .gitignore  README.md  build_launcher_exe.cmd  create_test_video.py  example_config.json  example_config.yaml  generate_clips.cmd  pyproject.toml  requirements-local.txt  requirements.txt  run_e2e_test.bat  run_local.bat  streamcuter_exe_launcher.py
app/: asr.py  audio_mix.py  banner_ads.py  cache.py  cleanup.py  cli.py  config.py  content_detector.py  cta_pause.py  downloader.py  highlight_detector.py  layout.py  layout_dataset.py  layout_selector.py  main.py  probe.py  renderer.py  subtitles.py  trim_selector.py  webcam_detector.py  webcam_types.py  wizard.py
app/utils/: console.py  helpers.py
cta_texts/: en.txt  ru.txt
scripts/: benchmark_asr.py  bootstrap.ps1  install_deps.ps1
subtitles/: en.ass  ru.ass
tests/: test_integration_e2e.py  test_smoke.py
