[project]
name = "streamcuter"
version = "0.1.0"
description = "Automatic horizontal-to-vertical video cutter for TikTok/Shorts/Reels"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "opencv-python-headless>=4.9.0",
    "mediapipe>=0.10.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "Pillow>=10.0.0",
]

[project.scripts]
streamcuter = "app.cli:cli_entry"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
